syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-category/api/proto/v1";

import "v1/get-category.proto";

message GetUserCategoriesRequest {
  string userId = 1;
}

message GetUserCategoriesResponse {
  repeated Category categories = 1;
}
